# synthgen-particles-win

./: .gitignore  CMakeLists.txt  CMakeSettings.json  FlyingParticles.sln  FlyingParticles.vcxproj  LICENSE  README.md
src/: demo.cpp  demo.h  main.cpp  music.cpp  music.h  shader.cpp  shader.h  util.cpp  util.h
